2002-05-02  James Henstridge  <james@daa.com.au>

	* modules/fstype.c: get rid of some warnings that were preventing
	it from compiling due to -Werror

2002-05-01  Jody Goldberg <jody@gnome.org>

	* test/test-info.c (main) : add a test for is_local.

	* modules/Makefile.am : add fstype.c from gnu/findutils

	* modules/file-method.c (do_is_local) : implement.

	* configure.in : Add afs option and check for some utilities required
	  for the fstype code from gnu/findutils.

2002-04-26  Jody Goldberg <jody@gnome.org>

	* libgnomevfs/gnome-vfs-application-registry.c (application_add_key) :
	  Store supported_uri_schemes as a key in addition to the internal
	  representation.

Wed May 01 16:49:01 2002  George Lebl <jirka@5z.com>

	* modules/vfolder-desktop-method.c: reverted fix for #75150 and
	  fixed this correctly.  Do not reload the entire info structure,
	  all we need to do is to invalidate the root folder.  Also
	  in unrelated revert, g_build_filename already takes care of the '/'.

Wed May  1 19:12:02 2002  Jonathan Blandford  <jrb@redhat.com>

	* libgnomevfs/gnome-vfs-mime-info.c:
	(_gnome_vfs_mime_info_mark_gnome_mime_dir_dirty),
	(_gnome_vfs_mime_info_mark_user_mime_dir_dirty),
	(reload_if_needed), (gnome_vfs_mime_info_reload): Only reload the
	data if it is needed to be reloaded.

	* libgnomevfs/gnome-vfs-mime-monitor.c:
	(gnome_vfs_mime_monitor_init), (mime_dir_changed_callback),
	(gnome_vfs_mime_monitor_finalize): Let the data know that it needs
	to be reloaded.

	* libgnomevfs/gnome-vfs-mime-private.h: add
	_gnome_vfs_mime_info_mark_gnome_mime_dir_dirty and
	_gnome_vfs_mime_info_mark_user_mime_dir_dirty.

2002-05-01 Stephen Browne <stephen.browne@sun.com>

	* configure.in:
	* modules/Makefile.am:

	Made compile of cdemenu module conditional on solaris.

2002-04-30  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in (ALL_LINGUAS): added Vietnamese (vi)

2002-04-30 Stephen Browne <stephen.browne@sun.com>

	* modules/Makefile.am