@@ -1,3 +1,10 @@
+2002-05-02  Bastien Nocera  <hadess@hadess.net>
+
+	* test/test-mime-info.c: (main): fixup for current gnome2
+	removed test for default_component_iid, change test for
+	gnome_vfs_mime_set_registered_type_key as the behaviour
+	change in gnome2
+
 2002-05-02  James Henstridge  <james@daa.com.au>
 
 	* modules/fstype.c: get rid of some warnings that were preventing
